oh you can't use svg backgrounds with mlt

--- a/example.html
+++ b/example.html
@@ -15,7 +15,7 @@
            }
 
            #slate {
-              background: url(res/example_background.svg) top right;
+              background: url(res/example_background.png) top right;
               position: absolute;
               font-size: 200%;
               width: 60%;
@@ -108,7 +108,7 @@
         </script>
     </head>
     <body>
-        <img src="res/example_triangle.svg" id="triangle" style="-webkit-transform: rotate(0deg); width:100%; height: 100%; position: absolute; bottom: 10%; left: 50%" />
+        <img src="res/example_triangle.png" id="triangle" style="-webkit-transform: rotate(0deg); width:100%; height: 100%; position: absolute; bottom: 10%; left: 50%" />
         <div id="slate">
           <h1 id="speaker">Speaker name</h1>
           <p id="company">Company they work for.</p>
