Neatened up code and fixed LT exit

--- a/LT1_NOW.html
+++ b/LT1_NOW.html
@@ -117,7 +117,12 @@ var tl = new TimelineLite();
 tl.from(".triangle", 1, { css: { width: "0px", left: "-900" }, ease:Power4. easeOut } , "entry") 
 	.from( ".slateText", 0.5, { css: {  autoAlpha:0 },ease: Power4. easeInOut }, "entry -=0.5", "now" )
 	.from( "#sessionName", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut }, "now -=0.45", "sessionName" )
-	.from( "#sessionInfo", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut }, "sessionName-=0.45", "end"); 
+	.from( "#sessionInfo", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut }, "sessionName-=0.45", "end")
+	.to(".triangle", 1, { css: { width: "0px", left: "-900" }, ease:Power4. easeOut } , "end+=4")
+	.to( ".slateText", 0.2, { css: {  autoAlpha:0 },ease: Power4. easeInOut }, "end+=4")
+	.to("#sessionName", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut },  "end+=4")
+	.to("#sessionInfo", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut },  "end+=4"); 
+
 
 
 //  ANIMATION //
